added the methods getNumberOfLanes(), getFreespeed() and getCapacity() to org.matsim.api.core.v01.network.Link. Changed the calls to the not-time-dependent getters in a lot of places.
git-svn-id: file:///srv/local/data/cleanRepo/trunk@10906 a0517364-e873-4167-b1c8-416daa5a6b91